--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Flask==3.1.0
 Flask-SQLAlchemy==3.1.1
 Flask-Login==0.6.3
+Werkzeug==3.1.3
 python-dotenv==1.0.1
 google-api-python-client==2.163.0
 isodate==0.7.2
